# kio-orzeczenia-mcp

./: .gitignore  .mcp.json.example  CHANGELOG.md  CONSTITUTION.md  DISCOVERY.md  Dockerfile  README.md  SOURCES.md  pyproject.toml  server.json
src/kio_orzeczenia_mcp/: __init__.py  __main__.py  audit.py  cache.py  client.py  models.py  parser.py  rate_limit.py  server.py  signature.py
tests/: test_instructions_drift.py  test_signature.py  test_smoke.py
tests/fixtures/: kio_2924_21.html
